--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top">
         <div class="container">
-            <a class="navbar-brand fs-4" href="#">Pizza House</a>
+          
+    <img width="50px" height="50px" src="pizzahouse.svg" alt="">
+            <a class="navbar-brand fs-4" href="#"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
