--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
       <div>
         <h1 class="c-h1">OUR MENU</h1>
         <div class="grid">
-            <a class="c-items" href=""><img src="salad.jpg" alt="salad"><i class="fa-solid fa-leaf"></i><p class="text">Salads</p></a>
-            <a class="c-items" href=""><img src="pizza4.jpg" alt="pizza"><i class="fa-solid fa-pizza-slice"></i><p class="text">Pizzas</p></a>
-            <a class="c-items" href=""><img src="burger.jpg" alt="burger"><i class="fa-solid fa-burger"></i><p class="text">Burgers</p></a>
-            <a class="c-items" href=""><img src="dessert.jpg" alt="dessert"><i class="fa-solid fa-ice-cream"></i><p class="text">Desserts</p></a>
-            <a class="c-items" href=""><img src="drink.jpg" alt="drink"><i class="fa-solid fa-mug-saucer"></i><p class="text">Drinks</p></a>
-            <a class="c-items" href=""><img src="seafood.jpg" alt="seafood"><i class="fa-solid fa-fish-fins"></i><p class="text">Seafood</p></a>
+            <a class="c-items" href=""><img src="salad.jpg" alt="salad"></a>
+            <a class="c-items" href=""><img src="pizza4.jpg" alt="pizza"></a>
+            <a class="c-items" href=""><img src="burger.jpg" alt="burger"></a>
+            <a class="c-items" href=""><img src="dessert.jpg" alt="dessert"></a>
+            <a class="c-items" href=""><img src="drink.jpg" alt="drink"></a>
+            <a class="c-items" href=""><img src="seafood.jpg" alt="seafood"></a>
         </div>
       </div>
     </section>
