--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
       <div>
         <h1 class="c-h1">OUR MENU</h1>
         <div class="grid">
-            <a class="c-items" href=""><img src="salad.jpg" alt="salad"></a>
-            <a class="c-items" href=""><img src="pizza4.jpg" alt="pizza"></a>
-            <a class="c-items" href=""><img src="burger.jpg" alt="burger"></a>
-            <a class="c-items" href=""><img src="dessert.jpg" alt="dessert"></a>
-            <a class="c-items" href=""><img src="drink.jpg" alt="drink"></a>
-            <a class="c-items" href=""><img src="seafood.jpg" alt="seafood"></a>
+            <a class="c-items" href=""><img src="Salad.jpg" alt="salad"></a>
+            <a class="c-items" href=""><img src="Pizza4.jpg" alt="pizza"></a>
+            <a class="c-items" href=""><img src="Burger.jpg" alt="burger"></a>
+            <a class="c-items" href=""><img src="Dessert.jpg" alt="dessert"></a>
+            <a class="c-items" href=""><img src="Drink.jpg" alt="drink"></a>
+            <a class="c-items" href=""><img src="Seafood.jpg" alt="seafood"></a>
         </div>
       </div>
     </section>
