--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+        </style>
     <title>Pizza House</title>
 </head>
 <body>
@@ -49,43 +52,73 @@
             </div>
         </div>
     </nav>
-    
-    <div id="carouselExampleIndicators" class="carousel slide">
+
+    <div id="carouselExampleCaptions" class="carousel slide">
         <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
-            <div class="carousel-item active c-item">
-                <img src="pizza1.jpg" class="d-block w-100 c-img" alt="pizza1">
+          <div class="carousel-item active c-item">
+            <img src="pizza1.jpg" class="d-block w-100 c-img" alt="pizza">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Perfect pizza</h5>
+              <p>Experience the taste of a perfect pizza at PizzaHouse, one of the best restaurants!</p>
             </div>
-            <div class="carousel-item c-item">
-                <img src="pizza2.jpg" class="d-block w-100 c-img" alt="pizza2">
+          </div>
+          <div class="carousel-item c-item">
+            <img src="pizza2.jpg" class="d-block w-100 c-img" alt="pizza">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Quality ingredient</h5>
+              <p>We use only the best ingredients to make one-of-a-kind pizzas for our customers.</p>
             </div>
-            <div class="carousel-item c-item">
-                <img src="pizza3.jpg" class="d-block w-100 c-img" alt="pizza3">
+          </div>
+          <div class="carousel-item c-item">
+            <img src="pizza3.jpg" class="d-block w-100 c-img" alt="pizza">
+            <div class="carousel-caption d-none d-md-block">
+              <a href="#section1"><button class="btn btn-warning"><b>VIEW OUR MENU</b></button></a>
             </div>
+          </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
         </button>
-    </div>
-    <section class="section1">
+      </div>
+
+    <section id="section1" class="section1">
       <div>
         <h1 class="c-h1">OUR MENU</h1>
         <div class="grid">
-            <a class="c-items" href=""><img src="Salad.jpg" alt="salad"></a>
-            <a class="c-items" href=""><img src="Pizza4.jpg" alt="pizza"></a>
-            <a class="c-items" href=""><img src="Burger.jpg" alt="burger"></a>
-            <a class="c-items" href=""><img src="Dessert.jpg" alt="dessert"></a>
-            <a class="c-items" href=""><img src="Drink.jpg" alt="drink"></a>
-            <a class="c-items" href=""><img src="Seafood.jpg" alt="seafood"></a>
+            <div class="c-items">
+              <img src="Salad2.jpg" alt="salad">
+              <img src="Salad.jpg" class="img-front" alt="salad">
+            </div>
+            <div class="c-items">
+              <img src="Pizza4-2.jpg" alt="pizza">
+              <img src="Pizza4.jpg" class="img-front" alt="pizza">
+            </div>
+            <div class="c-items">
+              <img src="Burger2.jpg" alt="burger">
+              <img src="Burger.jpg" class="img-front" alt="burger">
+            </div>
+            <div class="c-items">
+              <img src="Dessert2.jpg" alt="dessert">
+              <img src="Dessert.jpg" class="img-front" alt="dessert">
+            </div>
+            <div class="c-items">
+              <img src="Drink2.jpg" alt="drink">
+              <img src="DrinK.jpg" class="img-front" alt="drink">
+            </div>
+            <div class="c-items">
+              <img src="Seafood2.jpg" alt="seafood">
+              <img src="Seafood.jpg" class="img-front" alt="seafood">
+            </div>
         </div>
       </div>
     </section>
@@ -93,10 +126,10 @@
     <div class="image-container">
         <img src="food.jpg" alt="Background">
         <div class="overlay-text">
-            <h1 class="display-4">Best atmosphere</h1>
+            <h1 class="display-4 font-as">Best atmosphere</h1>
             <p class="lead">PizzaHouse is the place of the best Pizza and high-quality service</p>
             <p>Ben Smith, Founder</p>
-            <button class="btn btn-success">VIEW OUR SERVICES</button>
+            <button class="btn btn-success"><b>VIEW OUR SERVICES</b></button>
         </div>
     </div>
 
@@ -121,7 +154,7 @@
                 <textarea class="form-control" id="message" rows="4" placeholder="Enter your message here"></textarea>
             </div>
             <div class="text-center">
-                <button type="submit" class="btn btn-warning">SEND MESSAGE</button>
+                <button type="submit" class="btn btn-warning"><b>SEND MESSAGE</b></button>
             </div>
         </form>
     </div>
