--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             </div>
             <div class="c-items">
               <img src="Drink2.jpg" alt="drink">
-              <img src="DrinK.jpg" class="img-front" alt="drink">
+              <img src="Drink.jpg" class="img-front" alt="drink">
             </div>
             <div class="c-items">
               <img src="Seafood2.jpg" alt="seafood">
