--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-        </style>
+    </style>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">    
     <title>Pizza House</title>
 </head>
 <body>
@@ -53,7 +54,7 @@
         </div>
     </nav>
 
-    <div id="carouselExampleCaptions" class="carousel slide">
+    <div id="carouselExampleCaptions" class="carousel slide mb-4">
         <div class="carousel-indicators">
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
           <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -77,7 +78,7 @@
           <div class="carousel-item c-item">
             <img src="pizza3.jpg" class="d-block w-100 c-img" alt="pizza">
             <div class="carousel-caption d-none d-md-block">
-              <a href="#section1"><button class="btn btn-warning"><b>VIEW OUR MENU</b></button></a>
+              <a href="#section1"><button class="btn btn-warning mb-3"><b>VIEW OUR MENU</b></button></a>
             </div>
           </div>
         </div>
@@ -91,49 +92,49 @@
         </button>
       </div>
 
-    <section id="section1" class="section1">
-      <div>
-        <h1 class="c-h1">OUR MENU</h1>
-        <div class="grid">
-            <div class="c-items">
-              <img src="Salad.jpg" class="img-front" alt="salad">
-              <img src="Salad2.jpg" alt="salad">
-            </div>
-            <div class="c-items">
-              <img src="Pizza4.jpg" class="img-front" alt="pizza">
-              <img src="Pizza4-2.jpg" alt="pizza">
-            </div>
-            <div class="c-items">
-              <img src="Burger.jpg" class="img-front" alt="burger">
-              <img src="Burger2.jpg" alt="burger">
-            </div>
-            <div class="c-items">
-              <img src="Dessert.jpg" class="img-front" alt="dessert">
-              <img src="Dessert2.jpg" alt="dessert">
-            </div>
-            <div class="c-items">
-              <img src="Drink.jpg" class="img-front" alt="drink">
-              <img src="Drink2.jpg" alt="drink">
-            </div>
-            <div class="c-items">
-              <img src="Seafood.jpg" class="img-front" alt="seafood">
-              <img src="Seafood2.jpg" alt="seafood">
-            </div>
+      <section id="section1" class="section1">
+        <div>
+          <h1 class="c-h1" data-aos="zoom-out">OUR MENU</h1>
+          <div class="grid">
+              <div class="c-items" data-aos="fade-up">
+                <img src="Salad.jpg" class="img-front" alt="salad">
+                <img src="Salad2.jpg" alt="salad">
+              </div>
+              <div class="c-items" data-aos="zoom-in">
+                <img src="Pizza4.jpg" class="img-front" alt="pizza">
+                <img src="Pizza4-2.jpg" alt="pizza">
+              </div>
+              <div class="c-items" data-aos="fade-down">
+                <img src="Burger.jpg" class="img-front" alt="burger">
+                <img src="Burger2.jpg" alt="burger">
+              </div>
+              <div class="c-items" data-aos="fade-down">
+                <img src="Dessert.jpg" class="img-front" alt="dessert">
+                <img src="Dessert2.jpg" alt="dessert">
+              </div>
+              <div class="c-items" data-aos="zoom-in">
+                <img src="Drink.jpg" class="img-front" alt="drink">
+                <img src="Drink2.jpg" alt="drink">
+              </div>
+              <div class="c-items" data-aos="fade-up">
+                <img src="Seafood.jpg" class="img-front" alt="seafood">
+                <img src="Seafood2.jpg" alt="seafood">
+              </div>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
 
     <div class="image-container">
         <img src="food.jpg" alt="Background">
         <div class="overlay-text">
-            <h1 class="display-4 font-as">Best atmosphere</h1>
-            <p class="lead">PizzaHouse is the place of the best Pizza and high-quality service</p>
-            <p>Ben Smith, Founder</p>
-            <button class="btn btn-success"><b>VIEW OUR SERVICES</b></button>
+            <h1 class="display-4 font-as" data-aos="zoom-out">Best atmosphere</h1>
+            <p class="lead" data-aos="zoom-in">PizzaHouse is the place of the best Pizza and high-quality service</p>
+            <p data-aos="zoom-in">Ben Smith, Founder</p>
+            <button class="btn btn-success" data-aos="zoom-out"><b>VIEW OUR SERVICES</b></button>
         </div>
     </div>
 
-    <div class="container">
+    <div class="container mt-5" data-aos="zoom-out">
         <h1 class="text-center mb-4">Contact Form</h1>
         <form>
             <div class="mb-3">
@@ -206,6 +207,11 @@
         <p class="mb-0">© 2024. All rights reserved.</p>
       </div>
     </footer>
-    
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        duration: 500
+      });
+    </script>
 </body>
 </html>
