--- a/salad.html
+++ b/salad.html
@@ -79,7 +79,7 @@
         <input type="url" id="salad-image-url" class="form-control">
     </div>
 
-    <button type="submit" class="btn btn-primary">Add Salad</button>
+    <button type="submit">Add Salad</button>
 </form>
 
   </div>
