--- a/login.html
+++ b/login.html
@@ -43,7 +43,7 @@
   <section class="login">
     <div class="container-login container">
         <h1 class="mb-4">Login</h1>
-        <form id="authForm>
+        <form id="authForm">
             <div class="mb-3">
                 <input type="text" class="form-control" id="fName" placeholder="Your name">
             </div>
