--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Pizza House</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg bg-white">
+  <nav class="navbar navbar-expand-lg">
   <div class="container">
       <a href="index.html"><img width="50px" height="50px" src="pizzahouse.svg" alt="pizzahouse logo"></a>
       <div class="nav-items-1">
@@ -32,7 +32,7 @@
       </div>
       <div class="nav-items-2">
           <a href="login.html" class="nav-icon"><i class="fa-solid fa-user"></i></a>
-          <a class="cart nav-icon" href="#">
+          <a class="cart nav-icon" href="cart.html">
               <i class="fa-solid fa-cart-shopping"></i>
               <p class="cart-number">0</p>
           </a>
