--- a/salad.html
+++ b/salad.html
@@ -1,91 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-    </style>
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">    
-    <title>Pizza House</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+    integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+  </style>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <title>Pizza House</title>
+
+  <style>
+    .footer2 {
+      width: 100%;
+      position: absolute;
+      bottom: 0;
+    }
+
+    .footer1 {
+      position: absolute;
+      bottom: 56px;
+      width: 100%;
+    }
+
+    .footer-separator {
+      position: absolute;
+      bottom: 56px;
+    }
+
+    @media(max-width:767px) {
+
+      .footer1,
+      .footer-separator {
+        display: none;
+      }
+    }
+  </style>
 </head>
+
 <body>
-  <nav class="navbar navbar-expand-lg bg-white">
-  <div class="container">
+  <nav class="navbar navbar-expand-lg">
+    <div class="container">
       <a href="index.html"><img width="50px" height="50px" src="pizzahouse.svg" alt="pizzahouse logo"></a>
       <div class="nav-items-1">
-          <ul class="navbar-nav">
-              <li class="nav-item">
-                  <a class="nav-link" href="index.html">Home</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="#">About Us</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="#section1">Our Menu</a>
-              </li>
-          </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">About Us</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#section1">Our Menu</a>
+          </li>
+        </ul>
       </div>
       <div class="nav-items-2">
-          <a href="login.html" class="nav-icon"><i class="fa-solid fa-user"></i></a>
-          <a class="cart nav-icon" href="#">
-              <i class="fa-solid fa-cart-shopping"></i>
-              <p class="cart-number">0</p>
-          </a>
+        <a href="login.html" class="nav-icon"><i class="fa-solid fa-user"></i></a>
+        <a class="cart nav-icon" href="cart.html">
+          <i class="fa-solid fa-cart-shopping"></i>
+          <p class="cart-number">0</p>
+        </a>
       </div>
-  </div>
-</nav>
+    </div>
+  </nav>
 
-    <h1 class="c-h1">Our Salads</h1>
-    <section class="section-salad">
-       <div class="div-salad">
-       </div>
-    </section>
+  <h1 class="c-h1">Our Salads</h1>
+  <section class="section-salad">
+    <div class="div-salad">
+    </div>
+  </section>
 
-    <div class="add-salad-form-container">
+  <div class="add-salad-form-container">
     <form id="salad-form" class="add-salad-form">
-    <div class="form-group">
+      <div class="form-group">
         <label for="salad-name">Salad Name</label>
         <input type="text" id="salad-name" class="form-control" required>
-    </div>
-    <div class="form-group">
+      </div>
+      <div class="form-group">
         <label for="salad-price">Price ($)</label>
         <input type="number" id="salad-price" class="form-control" required>
-    </div>
-    <div class="form-group">
+      </div>
+      <div class="form-group">
         <label for="salad-description">Description</label>
         <textarea id="salad-description" class="form-control" required></textarea>
-    </div>
+      </div>
 
-    <div class="form-group">
+      <div class="form-group">
         <label>Image Upload</label>
         <div>
-            <label><input type="radio" name="image-option" id="upload-image" value="upload" checked> Upload Image</label>
-            <label><input type="radio" name="image-option" id="url-image" value="url"> Use Image URL</label>
+          <label><input type="radio" name="image-option" id="upload-image" value="upload" checked> Upload Image</label>
+          <label><input type="radio" name="image-option" id="url-image" value="url"> Use Image URL</label>
         </div>
-    </div>
+      </div>
 
-    <div class="form-group" id="file-upload-group">
+      <div class="form-group" id="file-upload-group">
         <label for="salad-image-file">Choose Image</label>
         <input type="file" id="salad-image-file" class="form-control">
-    </div>
+      </div>
 
-    <div class="form-group" id="url-input-group" style="display:none;">
+      <div class="form-group" id="url-input-group" style="display:none;">
         <label for="salad-image-url">Image URL</label>
         <input type="url" id="salad-image-url" class="form-control">
-    </div>
+      </div>
 
-    <button type="submit">Add Salad</button>
-</form>
+      <button type="submit">Add Salad</button>
+    </form>
 
   </div>
-  
-  
-  
 
 
 
@@ -102,60 +133,66 @@
 
 
 
-    
-    <button id="scrollToTopBtn" class="scrollToTopBtn"><i class="fa-solid fa-up-long"></i></button>
-    <button class="toggleDarkMode" id="darkModeButton" onclick="toggleDarkMode()">Dark mode<i class="fa-solid fa-moon"></i></button>
-    <button class="toggleLightMode" id="lightModeButton" onclick="toggleDarkMode()"><i class="fa-solid fa-sun"></i>Light mode</button>
 
-    <footer class="text-white text-center py-4 mt-5">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-4">
-            <h5>What We Offer</h5>
-            <ul class="list-unstyled">
-              <li>Pizzas</li>
-              <li>Burgers</li>
-              <li>Salads</li>
-              <li>Drinks</li>
-              <li>Seafood</li>
-              <li>Desserts</li>
-            </ul>
-          </div>
-          <div class="col-md-4">
-            <h5>Information</h5>
-            <ul class="list-unstyled">
-              <li>About Us</li>
-              <li>Latest News</li>
-              <li>Our Menu</li>
-              <li>FAQ</li>
-              <li>Shop</li>
-              <li>Contact Us</li>
-            </ul>
-          </div>
-          <div class="col-md-4">
-        <ul class="list-unstyled">
-          <li id="tel"><a href="#"><i class="fa-solid fa-phone"></i> +1 718-999-3939</a></li>
-          <li id="loc"><a href="#"><i class="fa-solid fa-location-dot"></i> Boumerdes</a></li>
-          <li><a href="#"><i class="fa-brands fa-google"></i></a></li>
-          <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
-          <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
-        </ul>
+
+
+
+  <button id="scrollToTopBtn" class="scrollToTopBtn"><i class="fa-solid fa-up-long"></i></button>
+  <button class="toggleDarkMode" id="darkModeButton" onclick="toggleDarkMode()">Dark mode<i
+      class="fa-solid fa-moon"></i></button>
+  <button class="toggleLightMode" id="lightModeButton" onclick="toggleDarkMode()"><i class="fa-solid fa-sun"></i>Light
+    mode</button>
+
+  <footer class="text-white text-center py-4 mt-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-4">
+          <h5>What We Offer</h5>
+          <ul class="list-unstyled">
+            <li>Pizzas</li>
+            <li>Burgers</li>
+            <li>Salads</li>
+            <li>Drinks</li>
+            <li>Seafood</li>
+            <li>Desserts</li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <h5>Information</h5>
+          <ul class="list-unstyled">
+            <li>About Us</li>
+            <li>Latest News</li>
+            <li>Our Menu</li>
+            <li>FAQ</li>
+            <li>Shop</li>
+            <li>Contact Us</li>
+          </ul>
+        </div>
+        <div class="col-md-4">
+          <ul class="list-unstyled">
+            <li id="tel"><a href="#"><i class="fa-solid fa-phone"></i> +1 718-999-3939</a></li>
+            <li id="loc"><a href="#"><i class="fa-solid fa-location-dot"></i> Boumerdes</a></li>
+            <li><a href="#"><i class="fa-brands fa-google"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+            <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+          </ul>
         </div>
       </div>
-    </footer>
-    <div class="footer-separator"></div>
-    <footer class="text-white text-center py-3">
-      <div class="container">
-        <p class="mb-0">© 2024. All rights reserved.</p>
-      </div>
-    </footer>
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-      AOS.init({
-        duration: 500
-      });
-    </script>
-    <script src="main.js"></script>
+  </footer>
+  <div class="footer-separator"></div>
+  <footer class="text-white text-center py-3">
+    <div class="container">
+      <p class="mb-0">© 2024. All rights reserved.</p>
+    </div>
+  </footer>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      duration: 500
+    });
+  </script>
+  <script src="main.js"></script>
 </body>
+
 </html>
