--- a/cart.html
+++ b/cart.html
@@ -48,31 +48,56 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg">
-        <div class="container">
-            <a href="index.html"><img width="50px" height="50px" src="pizzahouse.svg" alt="pizzahouse logo"></a>
-            <div class="nav-items-1">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#section1">Our Menu</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="nav-items-2">
-                <a href="login.html" class="nav-icon"><i class="fa-solid fa-user"></i></a>
-                <a class="cart nav-icon" href="#">
-                    <i class="fa-solid fa-cart-shopping"></i>
-                    <p class="cart-number">0</p>
-                </a>
-            </div>
+    
+    
+   <nav class="navbar navbar-expand-lg sticky-top">
+    <div class="container">
+
+      <!-- Left: Logo -->
+      <a class="navbar-brand" href="index.html">
+        <img src="pizzahouse.svg" alt="Logo">
+      </a>
+
+      <!-- Hamburger button -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <!-- Collapsible menu -->
+      <div class="collapse navbar-collapse justify-content-center" id="mainNavbar">
+        <ul class="navbar-nav mb-2 mb-lg-0 text-center">
+          <li class="nav-item">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#menu">Menu</a>
+          </li>
+        </ul>
+
+        <!-- Icons stacked vertically (only on small screens) -->
+        <div class="sidebar-icons d-lg-none">
+          <a href="login.html" class="nav-icon"><i class="fa-solid fa-user"></i></a>
+          <a href="#" class="nav-icon position-relative">
+            <i class="fa-solid fa-cart-shopping"></i>
+            <span class="cart-number">0</span>
+          </a>
         </div>
-    </nav>
+      </div>
+
+      <!-- Top-right icons (only on large screens) -->
+      <div class="d-flex align-items-center top-icons d-none d-lg-flex">
+        <a href="login.html" class="nav-icon"><i class="fa-solid fa-user"></i></a>
+        <a href="#" class="nav-icon position-relative">
+          <i class="fa-solid fa-cart-shopping"></i>
+          <span class="cart-number">0</span>
+        </a>
+      </div>
+
+    </div>
+  </nav>
 
 
 
@@ -84,7 +109,7 @@
             class="fa-solid fa-moon"></i></button>
     <button class="toggleLightMode" id="lightModeButton" onclick="toggleDarkMode()"><i class="fa-solid fa-sun"></i>Light
         mode</button>
-    <footer class="footer2 text-white text-center py-4 mt-5">
+    <footer class="footer1 text-white text-center py-4 mt-5">
         <div class="container">
             <div class="row">
                 <div class="col-md-4">
@@ -122,7 +147,7 @@
             </div>
     </footer>
     <div class="footer-separator"></div>
-    <footer class="footer1 text-white text-center py-3">
+    <footer class="footer2 text-white text-center py-3">
         <div class="container">
             <p class="mb-0">© 2024. All rights reserved.</p>
         </div>
